--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,7 @@ jobs:
         id: apply
         run: terraform apply --auto-approve
         working-directory: ./Terraform-VPC
+      - name: Terraform Destroy
+        id: destory
+        run: terraform destroy 
+        working-directory: ./Terraform-VPC
