added again terraform destroy --auto-approve

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,5 @@ jobs:
         working-directory: ./Terraform-VPC
       - name: Terraform Destroy
         id: destory
-        run: terraform destroy 
+        run: terraform destroy --auto-apporve
         working-directory: ./Terraform-VPC
